# gudong-backend

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20230901000000_create_activities_table.sql  20240304_initial.sql  20240316_user_activities.sql  20250330_add_postgis.sql
src/: common.rs  error.rs  lib.rs  main.rs  result.rs  router.rs
src/api/: mod.rs
src/api/handlers/: activity.rs  group.rs  message.rs  mod.rs  user.rs
src/api/models/: activity.rs  group.rs  message.rs  mod.rs  user.rs
src/api/operations/: activity.rs  group.rs  message.rs  mod.rs  test.rs  user.rs
src/api/schema/: activity.rs  common.rs  group.rs  message.rs  mod.rs  user.rs
src/application/chat/: middleware.rs
src/cache/: mod.rs
src/cache/keys/: activity_keys.rs  group_keys.rs  mod.rs  user_keys.rs
src/cache/models/: activity.rs  group.rs  mod.rs  rate_limit.rs  session.rs  token.rs  user.rs
src/cache/operations/: activity.rs  group.rs  mod.rs  rate_limit.rs  session.rs  token.rs  user.rs
src/config/: mod.rs
src/database/: mod.rs
src/database/entities/: activity.rs  group.rs  message.rs  user.rs
src/database/models/: activity.rs  group.rs  message.rs  mod.rs  user.rs
src/database/operations/: activity.rs  group.rs  message.rs  user.rs
src/database/repositories/: activity.rs  group.rs  message.rs  mod.rs  user.rs
src/group/: group_operation.rs  group_types.rs  handlers.rs  mod.rs  types.rs
src/handlers/: group.rs  message.rs  mod.rs  protected.rs  user.rs
src/infrastructure/: auth.rs
src/middleware/: auth.rs  error_handler.rs  mod.rs  rate_limit.rs
src/models/: group.rs  message.rs  mod.rs
src/routes/: mod.rs
src/routes/activity/: handler.rs  mod.rs  model.rs
src/routes/group/: handler.rs  mod.rs  model.rs
src/routes/message/: handler.rs  mod.rs  model.rs
src/routes/user/: handler.rs  mod.rs  model.rs
src/user/: handlers.rs  mod.rs  types.rs
src/utils/: mod.rs
