[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["json", "ws"] }
bb8 = "0.9.0"
bb8-redis = "0.21.0"
chrono = { version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3"
redis = { version = "0.29.0", features = ["tokio-comp"] }
rsa = "0.9.7"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.14.0", features = ["v4"] }
