[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
jsonwebtoken = "9.3.1"
redis = { version = "0.29.1", features = ["tokio-comp"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["v4"] }
